--- a/index.html
+++ b/index.html
@@ -48,11 +48,81 @@
 						скоро!
 					</div>
 					<div class="soon_cat cat_1">
-						<img src=""> Уязвимые
+						<img src="img/cats/pc.png"> Уязвимые
 					</div>
 					<div class="soon_text">
 						04.09.2015<br>
 						<strong>Не все дыры однаково полезны</strong>
+					</div>
+				</div>
+			</div>
+			<div class="times-public">
+				<h1>Опубликованные выпуски</h1>
+				<div class="times-public-drive">
+					<div class="drive cat_2" id="0">
+						<div class="drive-head">
+							<img src=""> Трояны
+						</div>
+						<div class="drive-body">
+							<div class="drive-body_middle">
+								<em>04.09.2015</em>
+								Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+								<a href="#">Читать</a>
+							</div>
+							
+						</div>
+					</div>
+					<div class="drive" id="1">
+						<div class="drive-head">
+							<img src=""> Трояны
+						</div>
+						<div class="drive-body">
+							<em>04.09.2015</em>
+							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+							<a href="#">Читать</a>
+						</div>
+					</div>
+					<div class="drive" id="2">
+						<div class="drive-head">
+							<img src=""> Трояны
+						</div>
+						<div class="drive-body">
+							<em>04.09.2015</em>
+							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+							<a href="#">Читать</a>
+						</div>
+					</div>
+					<div class="drive" id="3">
+						<div class="drive-head">
+							<img src=""> Трояны
+						</div>
+						<div class="drive-body">
+							<em>04.09.2015</em>
+							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+							<a href="#">Читать</a>
+						</div>
+					</div>
+					<div class="drive" id="4">
+						<div class="drive-head">
+							<img src=""> Трояны
+						</div>
+						<div class="drive-body">
+							<em>04.09.2015</em>
+							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+							<a href="#">Читать</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="times-comments">
+				<h1>Комметарии к выпускам</h1>
+				<div class="comments">
+					<div class="comments-item">
+						<span>11.02</span>
+						<div class="comments-item_body">
+							<h2><a href="#">А теперь поиграем в паровозик</a></h2>
+							<a href="#">И куда этот трофей потом?</a> <a href="#">[<span class="a-user_green">User</span>]</a>
+						</div>
 					</div>
 				</div>
 			</div>
