--- a/index.html
+++ b/index.html
@@ -124,6 +124,36 @@
 							<a href="#">И куда этот трофей потом?</a> <a href="#">[<span class="a-user_green">User</span>]</a>
 						</div>
 					</div>
+					<div class="comments-item">
+						<span>11.02</span>
+						<div class="comments-item_body">
+							<h2><a href="#">Запрещенный пост</a></h2>
+							<a href="#">8акерские атаки - серьезная угроза.</a> <a href="#">[<span class="a-user_green">User</span>]</a>
+						</div>
+					</div>
+					<div class="comments-item">
+						<span>11.02</span>
+						<div class="comments-item_body">
+							<h2><a href="#">Заработок Дринкмана</a></h2>
+							<a href="#">Продвижение катана в бизнесс массы продолжается.</a> <a href="#">[<span class="a-user_green">User</span>]</a>
+						</div>
+					</div>
+					<div class="comments-all">
+						<a href="#">Все комментарии</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="drwebki">
+			<div class="webki">
+				<div class="webki-head">
+					<h1>Читайте и зарабатывайте Dr.Web-ки</h1>
+					Возможность доступна только для владельцев аккаунтов на сайте «Доктор Веб».
+				</div>
+				<div class="webki-body">
+					<div class="webki-body_item">
+						<strong><big>1000</big> Dr.Web-ок</strong>
+					</div>
 				</div>
 			</div>
 		</div>
