--- a/index.html
+++ b/index.html
@@ -14,16 +14,31 @@
 						<div class="logo">Dr.WEB</div>
 					</a>
 				</div>
-				<div class="header-top-users">
-					<div class="h-users">
-						<a href="#sign" class="header-top-users_sign">
-							Вход на сайт <i class="arr_down"></i>
-						</a>
-						<a href="#reg" class="header-top-users_reg">
-							Регистрация
+				<div class="header-top-sign header-top-users">
+					<div class="sign-sign">
+						<a href="#">
+							<div class="sign-sign-a">
+								<div class="sign-sign-a_ico">
+									вход
+								</div>
+								<div class="sign-sign-a_text">
+									Вход на сайт <div class="arrow_down">></div>
+								</div>
+							</div>
 						</a>
 					</div>
-					
+					<div class="sign-reg">
+						<a href="#">
+							<div class="sign-reg-a">
+								<div class="sign-reg-a_ico">
+									регистрация
+								</div>
+								<div class="sign-reg-a_text">
+									Регистрация
+								</div>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 			<nav>
@@ -38,6 +53,42 @@
 					<li><a href="#">Инструменты</a></li>
 				</ul>
 			</nav>
+			<img class="sitename" src="img/sitename.png" />
+			<div class="search">
+				<form>
+					<input type="text" name="search" placeholder="Поиск" class="search_field">
+					<input type="submit" name="send" class="search_ico">
+				</form>
+			</div>
+			<div class="navico">
+				<ul>
+					<li>
+						<a href="#">
+							<div class="navico_0 navico_ico">0</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="navico_1 navico_ico">1</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="navico_2 navico_ico">2</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="navico_3 navico_ico">3</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<div class="navico_4 navico_ico">4</div>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</header>
 		<div class="times">
 			<span class="times-sign">Чтобы получить доступ к сервисам проекта, <a href="#">войдите на сайт</a> через аккаунт. Если у вас еще нет аккаунта, его можно <a href="#">создать</a>.</span>
@@ -61,12 +112,12 @@
 				<div class="times-public-drive">
 					<div class="drive cat_2" id="0">
 						<div class="drive-head">
-							<img src=""> Трояны
+							<img src="img/cats/horse_small.png"> Трояны
 						</div>
 						<div class="drive-body">
 							<div class="drive-body_middle">
 								<em>04.09.2015</em>
-								Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
+								<strong>Платить ли выкуп вымогателям?<br>Вот в чем вопрос!</strong>
 								<a href="#">Читать</a>
 							</div>
 							
@@ -74,44 +125,42 @@
 					</div>
 					<div class="drive" id="1">
 						<div class="drive-head">
-							<img src=""> Трояны
+							<img src="img/cats/horse_small.png"> Трояны
 						</div>
 						<div class="drive-body">
-							<em>04.09.2015</em>
-							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
-							<a href="#">Читать</a>
+							<div class="drive-body_middle">
+								<em>04.09.2015</em>
+								<strong>Платить ли выкуп вымогателям?<br>Вот в чем вопрос!</strong>
+								<a href="#">Читать</a>
+							</div>
 						</div>
 					</div>
 					<div class="drive" id="2">
-						<div class="drive-head">
-							<img src=""> Трояны
+						<div class="drive-head cat_1">
+							<img src="img/cats/pc_small.png"> Уязвимые
 						</div>
 						<div class="drive-body">
-							<em>04.09.2015</em>
-							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
-							<a href="#">Читать</a>
+							<div class="drive-body_middle">
+								<em>03.09.2015</em>
+								<strong>Не все дыры динаково полезны</strong>
+								<a href="#">Читать</a>
+							</div>
 						</div>
 					</div>
 					<div class="drive" id="3">
 						<div class="drive-head">
-							<img src=""> Трояны
+							<img src="img/cats/horse_small.png"> Трояны
 						</div>
 						<div class="drive-body">
-							<em>04.09.2015</em>
-							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
-							<a href="#">Читать</a>
+							<div class="drive-body_middle">
+								<em>04.09.2015</em>
+								<strong>Платить ли выкуп вымогателям?<br>Вот в чем вопрос!</strong>
+								<a href="#">Читать</a>
+							</div>
 						</div>
 					</div>
-					<div class="drive" id="4">
-						<div class="drive-head">
-							<img src=""> Трояны
-						</div>
-						<div class="drive-body">
-							<em>04.09.2015</em>
-							Платить ли выкуп вымогателям?<br>Вот в чем вопрос!
-							<a href="#">Читать</a>
-						</div>
-					</div>
+					<img src="img/arrow.png" class="slider-arrow_left">
+					<img src="img/arrow.png" class="slider-arrow_right">
 				</div>
 			</div>
 			<div class="times-comments">
@@ -151,12 +200,221 @@
 					Возможность доступна только для владельцев аккаунтов на сайте «Доктор Веб».
 				</div>
 				<div class="webki-body">
-					<div class="webki-body_item">
-						<strong><big>1000</big> Dr.Web-ок</strong>
+					<table>
+						<tr>
+							<td class="webki-body_item">
+								<strong><big>1&thinsp;000</big> Dr.Web-ок</strong>
+								<ul>
+									<li>За комментирование 100 выпусков <strong>подряд в день их публикации</strong></li>
+									<li>За оценку 100 выпусков <strong>подряд в день их публикации</strong></li>
+								</ul>
+							</td>
+							<td class="webki-line_v">
+								<div class="webki-line_v_line">|</div>
+							</td>
+							<td class="webki-body_item">
+								<strong><big>100</big> Dr.Web-ок</strong>
+								<ul>
+									<li>За комментирование 100 любых выпусков</li>
+									<li>За оценку 100 любых выпусков</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+							<td class="webki-line_h_middle"></td>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-body_item">
+								<strong><big>10</big> Dr.Web-ок</strong>
+								<ul>
+									<li>За комментарий выпуска в день его выхода </li>
+									<li>За публикацию ссылки на выпуск в соцсети (только ВK и FB*) </li>
+									<li>За твит выпуска</li>
+								</ul>
+								<div class="webki_atention">-</div>
+								<small>
+									*Это связано с техническими ограничениями соцсетей.
+								</small>
+							</td>
+							<td class="webki-line_v">
+								<div class="webki-line_v_line">|</div>
+							</td>
+							<td class="webki-body_item">
+								<strong><big>1</big> Dr.Web-ка</strong>
+								<ul>
+									<li>За комментарий выпуска не в день выхода выпуска</li>
+									<li>За оценку выпуска (+ или –)</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="ads">
+				<div class="ads_head">
+					<h1>Графика</h1>
+					Скачайте и разместите эти баннеры на своем сайте — пусть как можно больше людей найдут полезную для себя информацию на его страницах.
+					<div class="ads_body">
+						<div class="ads_item ad_1">
+							<img src="img/ads/prew_4.png">
+							<strong>240x400 px</strong>
+							<a href="img/ads/full_4.png">Скачать</a>
+						</div>
+						<div class="ads_item ad_2">
+							<img src="img/ads/prew_3.png">
+							<strong>240x400 px</strong>
+							<a href="img/ads/full_3.png">Скачать</a>
+						</div>
+						<div class="ads_group">
+							<div class="ads_item ad_3">
+								<img src="img/ads/prew_1.png">
+								<strong>240x400 px</strong>
+								<a href="img/ads/full_1.png">Скачать</a>
+							</div>
+							<div class="ads_item ad_4">
+								<img src="img/ads/prew_2.png">
+								<strong>240x400 px</strong>
+								<a href="img/ads/full_2.png">Скачать</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="informs">
+				<h1>Информеры</h1>
+				Добавьте код информера «Антивирусная правДА!» в код своей страницы, и все выпуски проекта «Антивирусная правДА!» станут доступны посетителям Вашего сайта немедленно после их публикации.
+				<a href="#">Скачать информеры</a>
+			</div>
+			<div class="trophy">
+				<div class="webki-head">
+					<h1>Трофеи</h1>
+					Участвуйте в жизни проекта «Антивирусная правДА!» и получайте в награду трофеи!
+				</div>
+				<div class="webki-body">
+					<table>
+						<tr>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_0.png">
+								</div>
+								<div class="trophy-name">
+									Собкор
+								</div>
+								<div class="trophy-desc">
+									для собственных корреспондентов проекта «Антивирусная правДА!»
+								</div>
+							</td>
+							<td class="webki-line_v">
+								<div class="webki-line_v_line">|</div>
+							</td>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_1.png">
+								</div>
+								<div class="trophy-name">
+									По правде!
+								</div>
+								<div class="trophy-desc">
+									Можно получить за публикацию ссылки на 10 и более выпусков в Мой мир и Twitter.
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+							<td class="webki-line_h_middle"></td>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_2.png">
+								</div>
+								<div class="trophy-name">
+									Правдовед
+								</div>
+								<div class="trophy-desc">
+									За первые десять комментариев к любым выпускам нового онлайн-проекта
+								</div>
+							</td>
+							<td class="webki-line_v">
+								<div class="webki-line_v_line">|</div>
+							</td>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_3.png">
+								</div>
+								<div class="trophy-name">
+									Правды много не бывает!
+								</div>
+								<div class="trophy-desc">
+									предназначен для тех, кто сделал ретвит
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+							<td class="webki-line_h_middle"></td>
+							<td class="webki-line_h">
+								<div class="webki-line_h_line">-</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_4.png">
+								</div>
+								<div class="trophy-name">
+									Правдо- искатель
+								</div>
+								<div class="trophy-desc">
+									Каждому, кто предложит интересную тему нового выпуска или сделает любое креативное предложение по развитию проекта
+								</div>
+							</td>
+							<td class="webki-line_v">
+								<div class="webki-line_v_line">|</div>
+							</td>
+							<td class="webki-body_item">
+								<div class="trophy-img">
+									<img src="img/trophy/trophy_5.png">
+								</div>
+								<div class="trophy-name">
+									По соточке
+								</div>
+								<div class="trophy-desc">
+									Получат читатели за комментарии ста выпусков «Антивирусная правДЫ!» подряд
+								</div>
+							</td>
+						</tr>
+					</table>					
+				</div>
+				<div class="trophy-footer">
+					<a href="#">Все трофеи</a>
+				</div>
+			</div>
 		</div>
+		<footer>
+			<div class="footer-spyder">
+				<img src="img/spyder.png">
+				© «Доктор Веб»
+2003 — 2015
+			</div>
+			<div class="footer-about">
+				<p>«Доктор Веб» — российский производитель антивирусных средств защиты информации под маркой Dr.Web. Продукты Dr.Web разрабатываются с&nbsp;1992 года. Компания — ключевой игрок на российском рынке программных средств обеспечения базовой потребности бизнеса — безопасности информации. «Доктор Веб» — один из немногих антивирусных вендоров в мире, владеющих собственными уникальными технологиями детектирования и лечения вредоносных программ. Антивирусная защита Dr.Web позволяет информационным системам клиентов эффективно противостоять любым, даже неизвестным угрозам.</p>
+				<p>«Доктор Веб» стал первой компанией, предложившей на российском рынке инновационную модель использования антивируса в качестве услуги, и по сей день продолжает оставаться безусловным лидером российского рынка интернет-сервисов безопасности для поставщиков ИT-услуг. Кроме того, в 2010 году «Доктор Веб» первым из антивирусных вендоров предложил универсальные лицензии для защиты как компьютеров и ноутбуков, так и мобильных устройств на базе Android, Symbian OS и Windows Mobile. Государственные сертификаты и награды, а также география пользователей Dr.Web свидетельствуют о высоком качестве продуктов, созданных талантливыми российскими программистами.</p>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
